<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modul.MateriActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Pilih Materi"
        android:textColor="@color/colorBlueLab"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <Button
            android:id="@+id/btn_materi1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/solidcorner"
            android:onClick="onClick"
            android:text="@string/materi1"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_materi2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/solidcorner"
            android:onClick="onClick"
            android:text="@string/materi2"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_materi3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/solidcorner"
            android:onClick="onClick"
            android:text="@string/materi3"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_materi4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/solidcorner"
            android:onClick="onClick"
            android:text="@string/materi4"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_materi5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/solidcorner"
            android:onClick="onClick"
            android:text="@string/materi5"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_materi6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/solidcorner"
            android:onClick="onClick"
            android:text="@string/materi6"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:onClick="onClick"
        android:tint="@color/colorBlueLab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>